# brainwave-generator

./: .env.example  .gitignore  README.md  cli.py  config.example.yaml  config.yaml  episode.py  main.py  paths.py  pyproject.toml  tts.py
data/: characters.yaml  shots.yaml  voices.yaml
prompts/: blend.md  characters.md  context.md  description.md  evaluation.md  plot.md  script.md  shots.md  transitions.md  wavelang.md
scenes/04b3b9d1-ff63-4c0b-adf3-8083650c48a7/: episode-plot-response.txt  episode-script.txt  meta.json  scene-0-script-prompt.txt  scene-0-script-response.txt  scene-1-script-prompt.txt  scene-1-script-response.txt  scene-2-script-prompt.txt  scene-2-script-response.txt  scene-3-script-prompt.txt  scene-3-script-response.txt  scene-4-script-prompt.txt  scene-4-script-response.txt
scenes/10d7d7ab-0e02-4557-bf32-4dfbdc4278e0/: episode-plot-response.txt  episode-script.txt  meta.json  scene-0-script-prompt.txt  scene-0-script-response.txt  scene-1-script-prompt.txt  scene-1-script-response.txt  scene-2-script-prompt.txt  scene-2-script-response.txt  scene-3-script-prompt.txt  scene-3-script-response.txt  scene-4-script-prompt.txt  scene-4-script-response.txt
scenes/1446c50f-41d6-4d8e-9993-4a0f71d75eec/: episode-plot-prompt.txt  episode-plot-response.txt  episode-script.txt  meta.json  scene-0-script-prompt.txt  scene-0-script-response.txt  scene-1-script-prompt.txt  scene-1-script-response.txt  scene-2-script-prompt.txt  scene-2-script-response.txt  (+4 more)
scripts/: migrate_to_cloud.py
templates/: episode.md.j2  outline.md.j2  preview.md.j2  script.md.j2
(+752 files in other folders)
